--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -2,37 +2,36 @@ on:
   release:
     types:
       - published
-      - created
 
 jobs:
   build-linux:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
-      - uses: actions/checkout@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - uses: docker/login-action@v1
+      - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: meta
+      - id: metadata
         uses: docker/metadata-action@v3
         with:
-          images: ghcr.io/qovery/replibyte
-          tags: ${{ github.event.release.tag_name }}
+          images: ghcr.io/${{ github.repository_owner }}/test-publish
+          tags: |
+            type=semver,pattern={{version}},value=${{ github.event.release.tag_name }}
           # shortcut to create `latest` tag
           flavor: latest=true
 
 
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v3
         with:
-          context: ${{ matrix.context }}
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          push: true
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
 
